--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,476 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::before,
+::after {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+  background-color: white;
+}
+
+/* ====== Task 1 ====== */
+
+.card-body-stars {
+  display: flex;
+  list-style: none;
+}
+
+/* ====== Task 2 ====== */
+
+.task-2 {
+  margin-top: 50px;
+  background: #e9e9e9;
+  color: #333;
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.4;
+  height: 100%;
+  width: 100%;
+}
+
+:focus {
+  outline: none;
+}
+
+.wrapper {
+  margin: 0 auto;
+  padding: 1rem 0;
+  width: calc(100% - 5rem);
+}
+
+
+/* Progress Bar */
+
+.progress {
+  background: #31708f;
+  height: 10px;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  transition: width 300ms ease;
+  width: 0;
+}
+
+
+/* Spinner */
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.loading {
+  animation: spin 1s infinite linear;
+  border-radius: 50%;
+  border: .25rem solid rgba(255, 255, 255, .5);
+  border-top-color: #31708f;
+  height: 30px;
+  position: absolute;
+  top: calc(1rem + 10px);
+  width: 30px;
+}
+
+
+/* Pagination */
+
+.page {
+  font-size: 0;
+  position: relative;
+  text-align: right;
+  top: 5px;
+}
+
+.page a {
+  color: #31708f;
+  display: inline-block;
+  font-size: 2.025rem;
+  text-decoration: none;
+  transition: color 300ms ease;
+}
+
+.page a:hover {
+  color: #333;
+}
+
+.page .prev {
+  display: none;
+}
+
+.page .set {
+  font-weight: 600;
+  margin: 0 .5rem;
+  pointer-events: none;
+  position: relative;
+  top: -1px;
+}
+
+
+/* Shop Styles */
+
+.item-list {
+  column-gap: 1rem;
+  margin: 1rem 0 0;
+  padding: 1rem 2rem 0 2rem;
+  opacity: 1;
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+
+.item {
+  background-color: #fff;
+  border-radius: 2px;
+  box-shadow: 2px 2px 4px 0 #d1d1d1;
+  display: inline-block;
+  margin: 0 0 1rem;
+  padding: 1rem;
+  position: relative;
+  width: 100%;
+}
+
+.item.hidden {
+  visibility: hidden;
+}
+
+.item-image {
+  background-color: #e9e9e9;
+}
+
+.item-image img {
+  border-radius: 2px;
+  display: block;
+  height: auto;
+  transition: opacity 1200ms ease;
+  width: 100%;
+}
+
+.item-title {
+  font-size: .85rem;
+  margin: .5rem .25rem;
+  word-wrap: break-word;
+}
+
+.item-price {
+  color: #3c763d;
+  display: inline-block;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: .5rem .25rem 0;
+  line-height: 1;
+}
+
+.item-quantity {
+  border-radius: 2px;
+  bottom: 1rem;
+  color: #fff;
+  font-size: .75rem;
+  font-weight: 600;
+  padding: .25rem .5rem;
+  position: absolute;
+  right: 1rem;
+}
+
+/* Quantity Level */
+
+[class^="level-"] {
+  color: #fff;
+}
+
+.level-low {
+  background-color: #a94442;
+}
+
+.level-medium {
+  background-color: #8a6d3b;
+}
+
+.level-high {
+  background-color: #3c763d;
+}
+
+/* Media Queries */
+
+@media only screen and (min-width: 480px) {
+  .item-list {
+    column-count: 2;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .item-list {
+    column-count: 3;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .item-list {
+    column-count: 4;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .item-list {
+    column-count: 5;
+  }
+}
+
+/* ====== Task 3 ====== */
+
+.task-3 {
+  background: #C5DDEB;
+  font: 14px/20px "Lato", Arial, sans-serif;
+  padding: 40px 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  margin: 0 auto;
+  width: 750px;
+  background: #444753;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.people-list {
+  width: 260px;
+  float: left;
+}
+
+.people-list .search {
+  padding: 20px;
+}
+
+.people-list input {
+  border-radius: 3px;
+  border: none;
+  padding: 14px;
+  color: white;
+  background: #6A6C75;
+  width: 90%;
+  font-size: 14px;
+}
+
+.people-list .fa-search {
+  position: relative;
+  left: -25px;
+}
+
+.people-list ul {
+  padding: 20px;
+  height: 770px;
+}
+
+.people-list ul li {
+  padding-bottom: 20px;
+}
+
+.people-list img {
+  float: left;
+}
+
+.people-list .about {
+  float: left;
+  margin-top: 8px;
+}
+
+.people-list .about {
+  padding-left: 8px;
+}
+
+.people-list .status {
+  max-width: 150px;
+  color: #92959E;
+}
+
+.chat {
+  width: 490px;
+  float: left;
+  background: #F2F5F8;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: #434651;
+}
+
+.chat .chat-header {
+  padding: 20px;
+  border-bottom: 2px solid white;
+}
+
+.chat .chat-header img {
+  float: left;
+}
+
+.chat .chat-header .chat-about {
+  float: left;
+  padding-left: 10px;
+  margin-top: 6px;
+}
+
+.chat .chat-header .chat-with {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.chat .chat-header .chat-num-messages {
+  color: #92959E;
+}
+
+.chat .chat-header .fa-star {
+  float: right;
+  color: #D8DADF;
+  font-size: 20px;
+  margin-top: 12px;
+}
+
+.chat .chat-history {
+  padding: 30px 30px 20px;
+  border-bottom: 2px solid white;
+  overflow-y: scroll;
+  height: 575px;
+}
+
+.chat .chat-history ul {
+  list-style: none;
+}
+
+.chat .chat-history .message-data {
+  margin-bottom: 15px;
+}
+
+.chat .chat-history .message-data-time {
+  color: #a8aab1;
+  padding-left: 6px;
+}
+
+.chat .chat-history .message {
+  color: white;
+  padding: 18px 20px;
+  line-height: 26px;
+  font-size: 16px;
+  border-radius: 7px;
+  margin-bottom: 30px;
+  width: 90%;
+  position: relative;
+}
+
+.chat .chat-history .message:after {
+  bottom: 100%;
+  left: 7%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-bottom-color: #86BB71;
+  border-width: 10px;
+  margin-left: -10px;
+}
+
+.chat .chat-history .my-message {
+  background: #86BB71;
+}
+
+.chat .chat-history .other-message {
+  background: #94C2ED;
+}
+
+.chat .chat-history .other-message:after {
+  border-bottom-color: #94C2ED;
+  left: 93%;
+}
+
+.chat .chat-message {
+  padding: 30px;
+}
+
+.chat .chat-message textarea {
+  width: 100%;
+  border: none;
+  padding: 10px 20px;
+  font: 14px/22px "Lato", Arial, sans-serif;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  resize: none;
+}
+
+.chat .chat-message .fa-file-o,
+.chat .chat-message .fa-file-image-o {
+  font-size: 16px;
+  color: gray;
+  cursor: pointer;
+}
+
+.chat .chat-message button {
+  float: right;
+  color: #94C2ED;
+  font-size: 16px;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  background: #F2F5F8;
+}
+
+.chat .chat-message button:hover {
+  color: #75b1e8;
+}
+
+.fa-05 {
+  opacity: 0.5;
+}
+
+.fa-025 {
+  opacity: 0.25;
+}
+
+.online,
+.offline,
+.me {
+  margin-right: 3px;
+  font-size: 15px;
+}
+
+.online {
+  color: #86BB71;
+}
+
+.offline {
+  color: #E38968;
+}
+
+.me {
+  color: #94C2ED;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.float-right {
+  float: right;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
 }
